# crackdb

./: Cargo.toml  README.md  sample.csv
.github/: dependabot.yml
.github/workflows/: mdbook.yml  rust.yml
docs/: book.toml
docs/src/: SUMMARY.md
docs/src/guides/: data_formats.md  data_types.md  select_queries.md
src/: aggregators.rs  catalog.rs  data_types.rs  errors.rs  executors.rs  expressions.rs  functions.rs  handlers.rs  interpreter.rs  lib.rs  logical_plans.rs  main.rs  optimizer.rs  parser.rs  physical_plans.rs  pysical_plans.rs  row.rs  tables.rs
src/aggregators/: aggregating_buffer.rs  avg_agg.rs  count_agg.rs  max_agg.rs  min_agg.rs  sum_agg.rs
src/functions/: agg_function.rs
src/handlers/: create_table_handler.rs  insert_handler.rs  select_handler.rs
src/interpreter/: arithmetic.rs  booleans.rs
src/optimizer/: rules.rs
src/optimizer/rules/: prune_groupings_out_of_aggregators.rs  push_down_aggregators_rule.rs  resolve_expr_rule.rs  resolve_functions_rule.rs  resolve_literal_types_rule.rs  resolve_plan_rule.rs  sanitize_aggregator_rule.rs
src/physical_plans/: csv_scan.rs  filter.rs  hash_aggregator.rs  inmem_scan.rs  limit.rs  projection.rs  sort.rs
src/tables/: csv.rs  inmem.rs
tests/: aggregations.rs  crud.rs  csv.rs
tests/assets/: orders.csv
