[package]
name = "crackdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "crackdb"

[[bin]]
name = "crackdb"

[dependencies]
csv-core = "0.1.10"
sqlparser = { version = "0.32.0", features = ["serde", "visitor"]}
